# cashcrab

./: .gitignore  README.md  _typos.toml  pubspec.yaml
.github/workflows/: lint.yml
android/app/: build.gradle
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  color_schemes.g.dart  main.dart
lib/screens/: add_contact.dart  add_contacts.dart  contact_payment.dart  contacts.dart  create_invoice.dart  home.dart  invoice_info.dart  messages.dart  mints.dart  nostr_settings.dart  pay_invoice.dart  receive.dart  relays.dart  send.dart  settings.dart  token_info.dart
lib/screens/cashu/: create_token.dart  inbox.dart  receive_token.dart
lib/screens/contacts/: add_contact.dart  add_contacts.dart  contact_payment.dart  contacts.dart  messages.dart  profile.dart
lib/screens/ln/: confirm_pay_invoice.dart  create_invoice.dart  invoice_info.dart  pay_invoice.dart  paying_invoice.dart
lib/shared/: colors.dart  utils.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: api.rs  api.rs.ex  bridge_generated.io.rs  bridge_generated.rs  cashu.rs  database.rs  lib.rs  nostr.rs  types.rs  utils.rs
rust/src/database/: cashu.rs  contacts.rs  message.rs  mod.rs  nostr.rs  transactions.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+23 files in other folders)
