[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
anyhow = "1.0.57"
serde_json = "1.0.96"
minreq = "2.8.0"
bitcoin = "0.30.0"
lightning-invoice = "0.23.0"
lazy_static = "1.4.0"
tokio = {version = "1.28.1", features = ["sync", "rt-multi-thread"]}
cashu-crab = {git= "https://github.com/thesimplekid/cashu-crab"}
allo-isolate = "0.1.14"
thiserror = "1.0.40"
redb = "0.17.0"
log = "0.4.17"
simplelog = "0.12.1"
serde = {version = "1.0.163", features=["derive"]}
bitcoin_hashes = "0.12.0"
nostr-sdk = {version = "0.22.0", default-features = false, features=["nip04", "nip19"]}
hex = "0.4.3"
